Added cpanfile to Renovate bot configuration

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,5 +3,5 @@
   "extends": [
     "config:base"
   ],
-  "enabledManagers": ["pre-commit", "dockerfile"]
+  "enabledManagers": ["pre-commit", "dockerfile", "cpanfile"]
 }
