We will let Dependabot take care of Docker, not Renovate bot

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,5 +3,5 @@
   "extends": [
     "config:base"
   ],
-  "enabledManagers": ["pre-commit", "dockerfile", "cpanfile"]
+  "enabledManagers": ["pre-commit", "cpanfile"]
 }
